prevent word-wrap from breaking ui for long page names

--- a/src/css/interface.scss
+++ b/src/css/interface.scss
@@ -17,6 +17,7 @@ body{
 
 /* Interface */
 .forager{
+    word-wrap: normal;
     z-index: 2147483637;
     position: fixed;
     left: 0;
